2012-09-18  Vladimir Serbinenko  <phcoder@gmail.com>

	* grub-core/loader/i386/linux.c (grub_cmd_linux): Fix incorrect
	le-conversion.
	Reported by: BURETTE, Bernard.

2012-09-17  Colin Watson  <cjwatson@debian.org>

	* util/grub-mkconfig_lib.in (grub_quote): Remove outdated sentence
	from comment.

2012-09-14  Colin Watson  <cjwatson@ubuntu.com>

	* grub-core/term/terminfo.c: Only fix up powerpc key repeat on
	IEEE1275 machines.  Fixes powerpc-emu compilation.
	* include/grub/terminfo.h: Likewise.

2012-09-12  Vladimir Serbinenko  <phcoder@gmail.com>

	* include/grub/efi/api.h (grub_efi_runtime_services): Make vendor_guid
	a const pointer.
	* grub-core/efiemu/runtime/efiemu.c (efiemu_memcpy): Make from a
	const pointer.
	(efiemu_set_variable): Make vendor_guid a const pointer.

2012-09-12  Vladimir Serbinenko  <phcoder@gmail.com>

	Don't require grub-mkconfig_lib to generate manpages for programs.

	* gentpl.py (manpage): Additional argument adddeps. Add adddeps to
	dependencies, don't add grub-mkconfig_lib.
	(program): Pass empty adddeps.
	(script): Pass grub-mkconfig_lib as adddeps.

2012-09-11  Vladimir Serbinenko  <phcoder@gmail.com>

	* grub-core/disk/diskfilter.c (free_array) [GRUB_UTIL]: Fix memory leak.
	* util/getroot.c (grub_find_device): Likewise.
	(get_mdadm_uuid): Likewise.
	(grub_util_is_imsm): Likewise.
	(grub_util_pull_device): Likewise.
	* util/grub-probe.c (probe): Likewise.

2012-09-10  Benoit Gschwind <gschwind>

	* grub-core/loader/efi/appleloader.c (devpath_8): New var.
	(devs): Add devpath_8.

2012-09-08  Peter Jones <pjones@redhat.com>

	* grub-core/Makefile.core.def (efifwsetup): New module.
	* grub-core/commands/efi/efifwsetup.c: New file.
	* grub-core/kern/efi/efi.c (grub_efi_set_variable): New function
	* include/grub/efi/api.h (GRUB_EFI_OS_INDICATIONS_BOOT_TO_FW_UI):
	New define.
	* include/grub/efi/efi.h (grub_efi_set_variable): New proto.

2012-09-05  Jiri Slaby <jslaby@suse.cz>

	* configure.ac: Add SuSe path.
